 Tue Nov 13 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.7-2
  - change result to BLOCK when timeout, set initial case result to BLOCK
 Tue Nov 8 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.7-1
  - add patch from tangshaofeng, and introduces a new mechanism to run webapi case
  - alien to the new schema which move launcher attribute from tag test_definition to suite
  - add support to run xml without tag test_definition
  - add installation section into pdf doc
  - remove overall timeout control for webapi package
change permission to 755 for folder /opt/testkit/lite, so non-root user can user testkit-lite
 Tue Oct 23 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.6-1
  - add category filter back
  - add block button to the manualharness
  - cut off long case id to improve manualharness's user experience
  - change python build to standard rpm build
 Tue Oct 10 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.5-1
  - add BLOCK logic for webapi's result
 Tue Sep 29 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.4-4
  - update pdf files
 Tue Sep 28 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.4-3
  - add Known Issues section in README
  - update Notes section in README
 Tue Sep 25 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.4-2
  - integrate shaofeng's patch onload_for_perf
  - remove category filter
 Tue Sep 17 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.4-1
  - add sleep time between running tests.xml
  - update post message
  - add merging status message
  - update log format
  - Update elements(button, radiobox, etc) in testkit/web/manualharness.html
  - add time for merge log
  - update xsl according to new <spec> schema
 Tue Sep 10 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.3-2
  - support merge result file that has same case ID
  - update result file name
  - add error handler for post request, to print error message
 Tue Aug 30 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.3-1